# bittensor-pylon

./: .gitignore  CLAUDE.md  README.md  docker-run.sh  noxfile.py  pyproject.toml
.github/workflows/: cd-docker.yml  cd-pypi-client.yml  ci.yml
docs/: CLIENT.md  SERVICE.md
pylon/_internal/client/: abstract.py  asynchronous.py  config.py
pylon/_internal/common/: bodies.py  endpoints.py  requests.py  responses.py  settings.py
pylon/service/: api.py  tasks.py
pylon/service/bittensor/: client.py
pylon/v1/: __init__.py
pylon_client/: noxfile.py  pyproject.toml
pylon_client/_internal/common/: endpoints.py  exceptions.py  models.py  requests.py  responses.py  types.py
pylon_client/pylon_client/_internal/: config.py  pylon_commons
pylon_client/pylon_client/v1/: __init__.py
pylon_client/service/: api.py  routers.py
pylon_client/service/bittensor/: client.py
pylon_client/tests/: conftest.py  factories.py
pylon_client/tests/asynchronous/: base_test.py
pylon_client/tests/pact/: builders.py  conftest.py  constants.py  matchers.py
pylon_client/tests/synchronous/: test_http_error_handling.py
pylon_client/tests/unit/: test_async_config.py  test_sync_config.py  test_timeout_config.py
pylon_commons/: noxfile.py  pyproject.toml
pylon_commons/pylon_commons/: apiver.py  endpoints.py  exceptions.py  models.py  requests.py  responses.py  settings.py  timeout.py
pylon_commons/pylon_commons/_unstable/: __init__.py  bodies.py  endpoints.py  requests.py  responses.py
pylon_commons/pylon_commons/v1/: bodies.py  endpoints.py  requests.py  responses.py
pylon_commons/tests/: test_neuron_model.py
pylon_service/: Dockerfile  debug-run.sh  docker-run.sh  noxfile.py  pyproject.toml
pylon_service/pylon_service/: api.py  dependencies.py  exception_handlers.py  exceptions.py  identities.py  lifespans.py  logging.py  main.py  metrics.py  prometheus_controller.py  request_id.py  routers.py  scheduler.py  schema.py  settings.py  tasks.py  uvicorn_entrypoint.py
pylon_service/pylon_service/api/: utils.py
pylon_service/pylon_service/api/_unstable/: api.py  routers.py  tasks.py  utils.py
pylon_service/pylon_service/api/v1/: api.py  routers.py
pylon_service/pylon_service/bittensor/: client.py  exceptions.py  pool.py
pylon_service/pylon_service/bittensor/recent/: adapter.py  context.py  exceptions.py  provider.py  tasks.py
pylon_service/pylon_service/middleware/: request_timeout.py
pylon_service/tests/: behave.py  conftest.py  factories.py  mock_bittensor_client.py  mock_store.py  test_metrics_endpoint.py  test_request_id_context.py
pylon_service/tests/bittensor/recent/: test_adapter.py  test_context.py  test_provider.py
pylon_service/tests/bittensor/recent/tasks/: test_recent_object_update_task_executor.py
pylon_service/tests/bittensor/turbobt/: conftest.py  test_commit_weights.py  test_get_hyperparams.py  test_get_subnet_state.py  test_get_validators.py  test_set_weights.py
pylon_service/tests/identity_endpoints/: test_generate_certificate_keypair_endpoint.py  test_get_certificate_by_hotkey_endpoint.py  test_get_commitment_by_hotkey_endpoint.py  test_get_commitments_endpoint.py  test_get_latest_neurons_endpoint.py  test_get_neurons_endpoint.py  test_get_own_commitment_endpoint.py  test_get_recent_neurons_endpoint.py  test_put_weights_endpoint.py
pylon_service/tests/open_access_endpoints/: test_get_certificates_endpoint.py  test_get_extrinsic_endpoint.py  test_get_latest_neurons_endpoint.py  test_get_recent_neurons_endpoint.py  test_get_validators_endpoint.py
pylon_service/tests/pact/: conftest.py  state_handlers.py  test_verify_pacts.py
pylon_service/tests/unit/: conftest.py  test_identities_settings.py  test_request_id_context.py  test_request_timeout.py
pylon_service/tests/unit/bittensor/: test_bittensor_client_delegation.py  test_bittensor_client_pool.py
pylon_service/tests/unit/bittensor/recent/tasks/: test_update_recent_neurons_task.py  test_update_recent_object_task.py
pylon_service/tests/unit/bittensor/turbobt/: conftest.py  test_generate_certificate_keypair.py  test_get_block.py  test_get_certificate.py  test_get_certificates.py  test_get_commitment.py  test_get_commitments.py  test_get_neurons.py  test_get_neurons_list.py  test_set_commitment.py  test_shielded.py
pylon_service/tests/unit/identity_endpoints/: test_get_certificates_endpoint.py  test_get_commitment_by_hotkey_endpoint.py  test_get_neurons_endpoint.py  test_get_own_certificate_endpoint.py  test_get_own_commitment_endpoint.py  test_put_weights_endpoint.py  test_set_commitment_endpoint.py
pylon_service/tests/unit/open_access_endpoints/: test_get_certificate_by_hotkey_endpoint.py  test_get_commitment_by_hotkey_endpoint.py  test_get_commitments_endpoint.py  test_get_extrinsic_endpoint.py  test_get_latest_validators_endpoint.py  test_get_neurons_endpoint.py  test_get_validators_endpoint.py
pylon_service/tests/wallets/pylon/: coldkey
tests/: mock_bittensor_client.py
tests/client/: base_endpoint_test.py  conftest.py  test_async_config.py
tests/client/asynchronous/: test_http_error_handling.py
tests/client/synchronous/: test_http_error_handling.py
tests/service/identity_endpoints/: test_generate_certificate_keypair_endpoint.py  test_set_commitment_endpoint.py  (+1 more)
(+158 files in other folders)
