[project]
name = "bittensor-pylon-commons"
dynamic = ["version"]
description = "Shared types and models for Bittensor Pylon"
requires-python = ">=3.11"
authors = [{name = "Reef Technologies", email = "opensource@reef.pl"}]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[project.urls]
homepage = "https://github.com/backend-developers-ltd/bittensor-pylon"
repository = "https://github.com/backend-developers-ltd/bittensor-pylon"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pylon_commons/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pylon_commons"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TC005"]
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102", "D103", "D104",
    "E501", "B027", "B904", "B905",
]
preview = true
explicit-preview-rules = true
extend-select = ["DOC501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I", "F401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "pylon_commons.types.ArchiveBlocksCutoff",
    "pylon_commons.types.BittensorNetwork",
    "pylon_commons.types.BlockHash",
    "pylon_commons.types.BlockNumber",
    "pylon_commons.types.Coldkey",
    "pylon_commons.types.Consensus",
    "pylon_commons.types.Dividends",
    "pylon_commons.types.Emission",
    "pylon_commons.types.Hotkey",
    "pylon_commons.types.Incentive",
    "pylon_commons.types.MaxWeightsLimit",
    "pylon_commons.types.NetUid",
    "pylon_commons.types.NeuronUid",
    "pylon_commons.types.Port",
    "pylon_commons.types.PrivateKey",
    "pylon_commons.types.PruningScore",
    "pylon_commons.types.PublicKey",
    "pylon_commons.types.Rank",
    "pylon_commons.types.RevealRound",
    "pylon_commons.types.Stake",
    "pylon_commons.types.Tempo",
    "pylon_commons.types.Timestamp",
    "pylon_commons.types.Trust",
    "pylon_commons.types.ValidatorTrust",
    "pylon_commons.types.Weight",
]

[tool.pyright]
pythonVersion = "3.11"
exclude = ["noxfile.py", ".nox", ".venv"]
